# workshop-pandas

./: README.MD  app.py  dockerfile  main.py  pyproject.toml
config/: settings.py
data/: loader.py
ui/: challenge_page.py  tutorial_page.py  visualization_page.py
utils/: code_executor.py
