[project]
name = "wirehause-sample"
version = "0.1.0"
description = "Repositorio demonstrativo para a WireHause"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "streamlit>=1.43.2",
    "streamlit-ace>=0.1.1",
]
